docs: enhance React and microservices guides with best practices
- React: add error handling, performance, security, routing, useEffect patterns, project checklist
- Microservices: add service splitting, circuit breaker, auth, config management, monitoring, saga, versioning, canary, performance tuning, security hardening